# ydb-dataclass

./: README.md  pyproject.toml  setup.cfg
src/ydb_dataclass/: __init__.py  decorator.py  queries.py  types.py
