[metadata]
name = ydb-dataclass
version = 0.1.0
author = Korean-DOG
description = Библиотека для работы с YDB через dataclass с явными типами
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Korean-DOG/ydb-dataclass

[options]
package_dir = =src
packages = find:
python_requires = >=3.12  # Python 3.12 как минимальная версия
install_requires = ydb>=4.0.0

[options.packages.find]
where = src